// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline scss have to match default theme snapshot 1`] = `
"/*
* Timeline theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
* Button mixins
*
*/
:root {
  --timeline-icon-height--small: var(--button-height--small);
  --timeline-icon-width--small: var(--button-width--small);
  --timeline-icon-border-radius--small: calc(
    var(--timeline-icon-height--small) / 2
  );
  --timeline-icon-height--medium: var(--button-height--medium);
  --timeline-icon-width--medium: var(--button-width--medium);
  --timeline-icon-border-radius--medium: calc(
    var(--timeline-icon-height--medium) / 2
  );
  --timeline-icon-width-diff: calc(
    (
        var(--timeline-icon-width--medium) -
          var(--timeline-icon-width--small)
      ) / 2
  );
  --timeline-border-spacing: var(--spacing-small);
  --timeline-border-spacing--icon-adjusted: calc(
    var(--timeline-icon-width-diff) + var(--timeline-border-spacing)
  ); }

.dnb-timeline__item {
  margin-left: var(--timeline-icon-width-diff); }
  .dnb-timeline__item__label__icon {
    width: var(--timeline-icon-width--small);
    line-height: var(--timeline-icon-height--small);
    border-radius: var(--timeline-icon-border-radius--small);
    color: var(--color-black-80);
    background-color: var(--color-white);
    --border-color: var(--color-black-80);
    box-shadow: inset 0 0 0 0.0625rem var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-timeline__item__label__icon {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-timeline__item__label__icon {
          box-shadow: 0 0 0 0.0625rem var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-timeline__item__label__icon {
        box-shadow: inset 0 0 0 1px var(--color-black-80); } }
  .dnb-timeline__item__label__name {
    margin-left: var(--timeline-border-spacing--icon-adjusted);
    font-size: var(--font-size-small);
    line-height: var(--line-height-small); }
  .dnb-timeline__item__content {
    margin-left: calc(var(--timeline-icon-width--small) / 2);
    padding-left: calc(var(--timeline-icon-width--small) / 2 + var(--timeline-border-spacing--icon-adjusted));
    border-left: 1px dashed var(--color-black-55); }
  .dnb-timeline__item--completed .dnb-timeline__item__content {
    border-left: 1px solid var(--color-black-80); }
  .dnb-timeline__item--completed .dnb-timeline__item__label__name {
    color: var(--color-black-80); }
  .dnb-timeline__item--current .dnb-timeline__item__content {
    margin-left: calc(var(--timeline-icon-width--medium) / 2);
    padding-left: calc(var(--timeline-icon-width--medium) / 2 + var(--timeline-border-spacing)); }
  .dnb-timeline__item--current .dnb-timeline__item__label__name {
    margin-left: var(--timeline-border-spacing);
    font-weight: var(--font-weight-medium);
    font-size: var(--font-size-basis);
    line-height: var(--line-height-basis); }
  .dnb-timeline__item--current .dnb-timeline__item__label__icon {
    width: var(--timeline-icon-width--medium);
    line-height: var(--timeline-icon-height--medium);
    border-radius: var(--timeline-icon-border-radius--medium); }
  .dnb-timeline__item--current {
    margin-left: 0; }
  .dnb-timeline__item--upcoming .dnb-timeline__item__label__name {
    font-weight: var(--font-weight-basis);
    color: var(--color-black-55); }
  .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
    color: var(--color-black-55);
    background-color: var(--color-black-3);
    --border-color: var(--color-black-3);
    box-shadow: inset 0 0 0 0.0625rem var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
          box-shadow: 0 0 0 0.0625rem var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
        box-shadow: inset 0 0 0 1px var(--color-black-3); } }
  .dnb-timeline__item:only-child {
    margin-left: 0; }
  .dnb-timeline__item:last-child .dnb-timeline__item__content {
    border-left: none; }
"
`;

exports[`Timeline scss have to match snapshot 1`] = `
"/*
* DNB Timeline
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
.dnb-timeline {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-timeline *,
  .dnb-timeline ::before,
  .dnb-timeline ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-timeline ::before,
  .dnb-timeline ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Timeline component
*
*/
/*
* Timeline theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
* Button mixins
*
*/
:root {
  --timeline-icon-height--small: var(--button-height--small);
  --timeline-icon-width--small: var(--button-width--small);
  --timeline-icon-border-radius--small: calc(
    var(--timeline-icon-height--small) / 2
  );
  --timeline-icon-height--medium: var(--button-height--medium);
  --timeline-icon-width--medium: var(--button-width--medium);
  --timeline-icon-border-radius--medium: calc(
    var(--timeline-icon-height--medium) / 2
  );
  --timeline-icon-width-diff: calc(
    (
        var(--timeline-icon-width--medium) -
          var(--timeline-icon-width--small)
      ) / 2
  );
  --timeline-border-spacing: var(--spacing-small);
  --timeline-border-spacing--icon-adjusted: calc(
    var(--timeline-icon-width-diff) + var(--timeline-border-spacing)
  ); }

.dnb-timeline__item {
  margin-left: var(--timeline-icon-width-diff); }
  .dnb-timeline__item__label__icon {
    width: var(--timeline-icon-width--small);
    line-height: var(--timeline-icon-height--small);
    border-radius: var(--timeline-icon-border-radius--small);
    color: var(--color-black-80);
    background-color: var(--color-white);
    --border-color: var(--color-black-80);
    box-shadow: inset 0 0 0 0.0625rem var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-timeline__item__label__icon {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-timeline__item__label__icon {
          box-shadow: 0 0 0 0.0625rem var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-timeline__item__label__icon {
        box-shadow: inset 0 0 0 1px var(--color-black-80); } }
  .dnb-timeline__item__label__name {
    margin-left: var(--timeline-border-spacing--icon-adjusted);
    font-size: var(--font-size-small);
    line-height: var(--line-height-small); }
  .dnb-timeline__item__content {
    margin-left: calc(var(--timeline-icon-width--small) / 2);
    padding-left: calc(var(--timeline-icon-width--small) / 2 + var(--timeline-border-spacing--icon-adjusted));
    border-left: 1px dashed var(--color-black-55); }
  .dnb-timeline__item--completed .dnb-timeline__item__content {
    border-left: 1px solid var(--color-black-80); }
  .dnb-timeline__item--completed .dnb-timeline__item__label__name {
    color: var(--color-black-80); }
  .dnb-timeline__item--current .dnb-timeline__item__content {
    margin-left: calc(var(--timeline-icon-width--medium) / 2);
    padding-left: calc(var(--timeline-icon-width--medium) / 2 + var(--timeline-border-spacing)); }
  .dnb-timeline__item--current .dnb-timeline__item__label__name {
    margin-left: var(--timeline-border-spacing);
    font-weight: var(--font-weight-medium);
    font-size: var(--font-size-basis);
    line-height: var(--line-height-basis); }
  .dnb-timeline__item--current .dnb-timeline__item__label__icon {
    width: var(--timeline-icon-width--medium);
    line-height: var(--timeline-icon-height--medium);
    border-radius: var(--timeline-icon-border-radius--medium); }
  .dnb-timeline__item--current {
    margin-left: 0; }
  .dnb-timeline__item--upcoming .dnb-timeline__item__label__name {
    font-weight: var(--font-weight-basis);
    color: var(--color-black-55); }
  .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
    color: var(--color-black-55);
    background-color: var(--color-black-3);
    --border-color: var(--color-black-3);
    box-shadow: inset 0 0 0 0.0625rem var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
          box-shadow: 0 0 0 0.0625rem var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-timeline__item--upcoming:not(.dnb-skeleton) .dnb-timeline__item__label__icon {
        box-shadow: inset 0 0 0 1px var(--color-black-3); } }
  .dnb-timeline__item:only-child {
    margin-left: 0; }
  .dnb-timeline__item:last-child .dnb-timeline__item__content {
    border-left: none; }

.dnb-timeline {
  display: flex;
  flex-direction: column; }
  .dnb-timeline__item__label {
    display: flex;
    align-items: center;
    text-align: left;
    padding: 0; }
    .dnb-timeline__item__label__icon {
      display: flex;
      flex-shrink: 0;
      align-items: center;
      height: auto;
      justify-content: center;
      padding: 0; }
    .dnb-timeline__item__label__name {
      cursor: text; }
  .dnb-timeline__item__content {
    padding-bottom: var(--spacing-small); }
    .dnb-timeline__item__content__date {
      cursor: text;
      font-size: var(--font-size-x-small);
      font-weight: var(--font-weight-basis);
      color: var(--color-black-55); }
    .dnb-timeline__item__content__info {
      padding-top: var(--spacing-x-small); }
"
`;
